--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -34,7 +34,7 @@
               <li class="list-group-item">
                 <div class="mb-2">
                   <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
-                    <form class="float-right" action="/posts/<%= post._id%>/posts/<%= comment._id%>?_method=DELETE" method="POST">
+                    <form class="float-right" action="/posts/<%= post._id%>/comments/<%= comment._id%>?_method=DELETE" method="POST">
                       <button class="btn btn-sm btn-danger">Delete</button>
                     </form>
                     <a class="btn btn-sm btn-warning float-right mr-1" href="/posts/<%=post._id%>/comments/<%=comment._id%>/edit">
