--- a/src/views/comments/new.ejs
+++ b/src/views/comments/new.ejs
@@ -1,17 +1,19 @@
 <%- include('../partials/header') -%>
 
 <div class="container">
-  <h1 style="text-align: center;">Edit Comment</h1>
+  <h1 style="text-align: center;">Add New Comment to <%= post.name%></h1>
   <div style="width: 30%; margin: 20px auto;">
-    <form class="mb-2" action="/posts/<%= post_id %>/comments/<%=comment._id %>?_method=PUT" method="POST">
+    <form class="mb-2" action="/posts/<%= post._id %>/comments" method="POST">
       <div class="form-group">
         <label for="text">Comment</label>
-        <input type="text" class="form-control" id="text" name="text" value="<%= comment.text %>">
+        <input type="text" class="form-control" id="text" name="text" />
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block">Submit</button>
       </div>
     </form>
+
+    <a class="pl-0 btn" href="/posts">GO BACK to POSTS</a>
   </div>
 </div>
 
