--- a/src/views/posts/edit.ejs
+++ b/src/views/posts/edit.ejs
@@ -3,18 +3,40 @@
 <div class="container">
   <h1 style="text-align: center;">Edit POST: <%=post.title %></h1>
   <div style="width: 30%; margin: 20px auto;">
-    <form class="mb-2" action="/posts/<%= post._id %>/?_method=PUT" method="POST">
+    <form
+      class="mb-2"
+      action="/posts/<%= post._id %>/?_method=PUT"
+      method="POST"
+    >
       <div class="form-group">
         <label for="textname">Title</label>
-        <input type="text" class="form-control" id="textname" name="post[title]" value="<%=post.title %>">
+        <input
+          type="text"
+          class="form-control"
+          id="textname"
+          name="post[title]"
+          value="<%=post.title %>"
+        />
       </div>
       <div class="form-group">
         <label for="textimageurl">Image-URL</label>
-        <input type="text" class="form-control" id="textimageurl" name="post[image]"value="<%=post.image %>">
+        <input
+          type="text"
+          class="form-control"
+          id="textimageurl"
+          name="post[image]"
+          value="<%=post.image %>"
+        />
       </div>
       <div class="form-group">
         <label for="textdescription">Description</label>
-        <input type="text" class="form-control" id="textdescription" name="post[description]" value="<%=post.description %>">
+        <input
+          type="text"
+          class="form-control"
+          id="textdescription"
+          name="post[description]"
+          value="<%=post.description %>"
+        />
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block">Submit</button>
