--- a/src/views/posts/new.ejs
+++ b/src/views/posts/new.ejs
@@ -6,15 +6,25 @@
     <form class="mb-2" action="/posts" method="POST">
       <div class="form-group">
         <label for="textname">Title</label>
-        <input type="text" class="form-control" id="textname" name="title">
+        <input type="text" class="form-control" id="textname" name="title" />
       </div>
       <div class="form-group">
         <label for="textimageurl">Image-URL</label>
-        <input type="text" class="form-control" id="textimageurl" name="image">
+        <input
+          type="text"
+          class="form-control"
+          id="textimageurl"
+          name="image"
+        />
       </div>
       <div class="form-group">
         <label for="textdescription">Description</label>
-        <input type="text" class="form-control" id="textdescription" name="description">
+        <input
+          type="text"
+          class="form-control"
+          id="textdescription"
+          name="description"
+        />
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block">Submit</button>
