--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,15 +1,15 @@
 <%- include('partials/header') -%>
 <div class="container">
-  <h1 style="text-align: center;">Login</h1>
+  <h1 style="text-align: center;">Register</h1>
   <div style="width: 30%; margin: 20px auto;">
-    <form class="mb-2" action="/login" method="POST">
+    <form class="mb-2" action="/register" method="POST">
       <div class="form-group">
         <label for="text">Username</label>
-        <input type="text" class="form-control" id="text" name="username">
+        <input type="text" class="form-control" id="text" name="username" />
       </div>
       <div class="form-group">
         <label for="text">Password</label>
-        <input type="text" class="form-control" id="text" name="password">
+        <input type="text" class="form-control" id="text" name="password" />
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block">Submit</button>
